App/sb-11-monitoring/01-variant/05-testing-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  namespace: monitoring
  name: sb-11-connectivity-testing
  labels:
    app: sb-11-testing
spec:
  restartPolicy: OnFailure
  nodeSelector:
    node-type: worker
  serviceAccountName: sb-11-monitoring-service-account
  containers:

  # ----------------------------------------------------
  - name: testing-pod
    image: alpine:3.18
    command: [ "sh", "-c", "echo \"Install OpenSSH\";
      apk add openssh-server curl netcat-openbsd;
      ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key -q -N \"\";
      sed -i \"s/#PermitRootLogin prohibit-password/PermitRootLogin yes/g\" /etc/ssh/sshd_config;
      echo \"root:123456\" | chpasswd;
      /usr/sbin/sshd -D -e -ddd
      "
    ]
    ports:
    - containerPort: 22
      name: tcp22

    resources:
      limits:
        memory: 256Mi
        cpu: 500m
      requests:
        memory: 128Mi
        cpu: 250m

...


---
apiVersion: v1
kind: Service
metadata:
  name: sb-11-monitoring-testing-service
  namespace: monitoring
spec:
  selector:
    app: sb-11-testing
  type: LoadBalancer
  loadBalancerIP: 10.203.10.31
  ports:
  - protocol: TCP
    name: "http-22"
    port: 22
    targetPort: 22

...
