App/sb-11-monitoring/01-variant/07-pushgateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: 697bec34-74e0-11ee-a072-43cf06d4dae3
  name: sb-11-pushgateway
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 697bec34-74e0-11ee-a072-43cf06d4dae3
  template:
    metadata:
      labels:
        app: 697bec34-74e0-11ee-a072-43cf06d4dae3
    spec:
      nodeSelector:
        node-type: worker
      restartPolicy: Always
      containers:

      # ----------------------------------------------------
      - name: pushgateway
        image: reg.docker.askug.net:5000/pushgateway-sb-11:0.0.5

        livenessProbe:
          httpGet:
            path: /-/healthy
            port: 9091
          initialDelaySeconds: 5
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /-/ready
            port: 9091
          initialDelaySeconds: 3
          periodSeconds: 3

        ports:
        - containerPort: 9091
          name: tcp9091

        resources:
          limits:
            memory: 256Mi
            cpu: 500m
          requests:
            memory: 128Mi
            cpu: 250m

...


---
apiVersion: v1
kind: Service
metadata:
  name: sb-11-monitoring-pushgateway-service
  namespace: monitoring
spec:
  selector:
    app: 697bec34-74e0-11ee-a072-43cf06d4dae3
  type: ClusterIP
  ports:
    - protocol: TCP
      name: "http-9091"
      port: 9091
      targetPort: 9091

...
