App/sb-11-monitoring/01-variant/13-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sb-11-monitoring-grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.askug.net
    secretName: sb-11-grafana-tls
  rules:
  - host: grafana.askug.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sb-11-monitoring-grafana-service
            port:
              number: 3000

...


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sb-11-monitoring-hooker-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hooker.askug.net
    secretName: sb-11-hooker-tls
  rules:
  - host: hooker.askug.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sb-11-monitoring-hooker-service
            port:
              number: 18080

...
